--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "kdot"
 version = "0.1.0"
 authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
 edition = "2018"
+description = "An Archdot file manager."
+repository = "https://github.com/kpfromer/kdot/"
+license = "MIT"
+categories = ["command-line-utilities", "CLI", "dot-files", "arch"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
